# sundew

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  sundew.yaml
.github/profile/: README.md
.github/workflows/: ci.yml  release.yml
data/: demo_sundew.db
docs/: contributing.mdx  mint.json
docs/concepts/: anti-fingerprinting.mdx  fingerprinting.mdx  how-it-works.mdx  personas.mdx  traps.mdx
docs/getting-started/: configuration.mdx  installation.mdx  quickstart.mdx
docs/guides/: analyzing-data.mdx  custom-personas.mdx  deploying.mdx  mcp-client.mdx
docs/research/: findings.mdx  methodology.mdx
scripts/: generate_demo_data.py
src/sundew/: __init__.py  __main__.py  classify.py  cli.py  config.py  fingerprint.py  interpolation.py  mcp_client.py  models.py  server.py  storage.py
src/sundew/persona/: __init__.py  engine.py  generator.py
src/sundew/persona/packs/: fintech.json  healthcare.json  saas.json
src/sundew/traps/: __init__.py  api.py  discovery.py  mcp.py
tests/: test_anti_detection.py  test_benchmark.py  test_cli_query.py  test_config.py  test_fingerprint.py  test_integration.py  test_interpolation.py  test_models.py  test_persona.py  test_persona_generator.py  test_security.py  test_server.py  test_simulator.py  test_storage.py  test_traps.py
tests/simulate/: __init__.py  __main__.py  base.py  headers.py  timing.py
tests/simulate/profiles/: __init__.py  ai_recon_agent.py  config.py  human_researcher.py  mcp_agent.py  naive_scanner.py
